# GTM-audit

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  GTM_AUDIT_COMPLETE_PROMPT.md  README.md  docker-compose.yml  package-lock.json  package.json  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  version-bump.yml
.streamlit/: config.toml
agents/: aeo_agent.py  base_agent.py  company_research_agent.py  competitor_agent.py  context_store.py  conversion_agent.py  icp_agent.py  llm_client.py  mcp_browser_client.py  message_bus.py  messaging_agent.py  mockup_generator.py  orchestrator.py  report_agent.py  review_sentiment_agent.py  screenshot_agent.py  screenshot_annotator.py  seo_agent.py  social_agent.py  visual_design_agent.py  web_scraper_agent.py
agents/data_providers/: base_provider.py  mock_crunchbase.py  mock_g2.py  mock_semrush.py  web_search.py
backend/: dependencies.py  main.py
backend/middleware/: auth.py  rate_limit.py
backend/models/: __init__.py  agent_result.py  audit.py  base.py  report.py  session.py
backend/routers/: audits.py  auth.py  reports.py  websocket.py
backend/schemas/: agent.py  audit.py  auth.py  report.py
backend/services/: audit_service.py  progress_service.py  report_service.py
config/: constants.py  logging_config.py  settings.py
frontend/: streamlit_app.py
reports/: markdown_export.py  pdf_export.py  renderer.py  scoring.py
tests/: conftest.py  test_aeo_agent.py  test_extraction_quality.py  test_mock_providers.py  test_models.py
tools/: bump_version.py
(+15 files in other folders)
