[project]
name = "gtm-audit"
version = "0.2.1"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "backend", "config", "frontend", "reports"]

[tool.pytest.ini_options]
testpaths = ["tests"]
