[project]
name = "gtm-audit"
dynamic = ["version"]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "backend", "config", "frontend", "reports"]

[tool.pytest.ini_options]
testpaths = ["tests"]
